# Cloud-MGR

./: Cargo.toml  README.md  README_en.md  build.rs
.github/workflows/: build.yml
src/: fluent_host.rs  main.rs  mode.rs  plugins.rs
src/ui/: loading.rs  manage.rs  market.rs  mod.rs  selector.rs  settings.rs  shell.rs  shot.rs  widgets.rs
