[package]
name = "cloud-pe-plugin-market"
version = "0.2.0"
edition = "2021"
authors = ["NORMAL-EX (dddffgg)"]
build = "build.rs"

[dependencies]
# UI 改用 winui-rs / fluentpx：纯 Rust + Direct2D 的 WinUI 3 Fluent 控件库，取代原 eframe/egui。
fluentpx = { path = "../winui-rs-main/crates/fluentpx" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
futures = "0.3"
dirs = "5.0"
rfd = "0.15"
once_cell = "1.19"
parking_lot = "0.12"
anyhow = "1.0"
chrono = "0.4"
bytes = "1.5"
percent-encoding = "2.3"
winreg = { version = "0.52", features = ["transactions"] }
registry = "1.2"

[target.'cfg(windows)'.dependencies]
# 旧 Win32 绑定（管理员提权 / MessageBox / 字体注册表）仍用 winapi，保持 main 逻辑不变。
winapi = { version = "0.3", features = [
    "winuser",
    "winbase",
    "fileapi",
    "handleapi",
    "winioctl",
    "winnt",
    "dwmapi",
    "processthreadsapi",
    "securitybaseapi",
    "winreg",
    "minwindef",
] }
# fluentpx 的 Direct2D 宿主需要 windows 0.58。
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
